@@ -8,47 +8,27 @@
 <center>
 <h1><font color="pink">Welcome to the Official FVWM Homepage</font></h1>
 <p>
-<img src="fvwm.gif" alt="[FVWM]" width=307 height=129 align=middle>
+<img src="fvwm_smaller.gif" alt="[FVWM]" width=153 height=64 align=left>
 </center>
 
-<br><hr>
-
-<blockquote>
-<h3><font color="yellow">NEWS FLASH!</font></h3>
-FVWM 2.4.0, an official release, is now available for download!
-<!--FVWM 2.3.33, a stable candidate release is now available for download!-->
-<p>
-FVWM.ORG is back online!
-<p>
-The remnants of tropical storm Allison which have been ravaging the gulf
-and east coasts of the United States gave the University of Houston a
-present to the tune of more than twelve feet of water in some places.  The
-servers hosting fvwm.org are on the sixth floor and thus were safe from
-rising waters, but the building housing the servers
-suffered significant damage to
-its power delivery system and will be without electricity for up to ten
-weeks.
-<p>
-Once power was restored to parts of campus, the servers were relocated to
-get things running again.   Currently all fvwm.org services are up and
-running and will be for the foreseeable future.
-</blockquote>
-<hr>
-
-<p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
-manager for the X Window system. <a href="download.html">Get</a> your copy.
+manager for the X Window system.
+<p>
+<font size="+2" font color="yellow">NEWS FLASH! </font>
+FVWM 2.4.0, an official release, is now available for
+<a href="download.html">download!</a>
+<!--FVWM 2.3.33, a stable candidate release is now available for download!-->
 
-<blockquote>
-<table border=0 cellpadding=0 cellspacing=0>
-  <tr><td>Latest Stable Release: &nbsp;<td><b>2.4.0</b></tr>
-  <tr><td>Latest Beta Release:   &nbsp;<td><b>none</b></tr>
-</table>
-</blockquote>
+<!-- <blockquote> -->
+<!-- <table border=0 cellpadding=0 cellspacing=0> -->
+<!--   <tr><td>Latest Stable Release: &nbsp;<td><b>2.4.0</b></tr> -->
+<!--   <tr><td>Latest Beta Release:   &nbsp;<td><b>none</b></tr> -->
+<!-- </table> -->
+<!-- </blockquote> -->
 
-<p><hr>
+<!-- <p><hr> -->
 
-<h2 align=center>Table Of Contents</h2>
+<h2 align=center>Site Content</h2>
 
 <table border=0 cellpadding=0 cellspacing=0 width="100%"><tr>
 <td width="50%"><ul>
@@ -75,7 +55,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 </tr></table>
 
 <hr>
-Created: Jan 31, 1996 *
-Last modified: July 03, 2001
+Created: Jan 31, 1996
+Last modified: July 17, 2001
 </body>
 </html>
