@@ -1,3 +1,8 @@
+2001-07-17  Dan Espen  <dane@mk.telcordia.com>
+
+	* index.html (Created): Flood is no longer news.
+	New streamlined layout.
+
 2001-07-10  Mikhael Goikhman  <migo@homemail.com>
 
 	* generated/manpages/index.html:
